# Battleship

./: README.md
Battleship/: BoatsGame.cc  BoatsGame.h  BoatsGameModel.cc  CMakeLists.txt  Coordinates2d.cc  CoordinatesFactoryIf.h  GameData.h  Ship2d.h  ShipIf.h  ShipMast.cc  ShipMast.h  TerminalBoard.cc  TerminalBoard.h  TerminalBoats.h  main.cc  main.cpp  ship.cpp  ship.h
Battleship/Dagrams/Code/: Boats.drawio
Battleship/inc/: BoatsGame.h  BoatsGameModel.h  Coordinates2d.h  Coordinates2dFactory.h  CoordinatesIf.h  GameControllerIf.h  GameModelIf.h  GameStrategyIf.h  Ship2d.h  Ship2dFactory.h  ShipFactoryIf.h  ShipMast.h  SurfaceIf.h  TerminalBoats2d.h
Battleship/src/: Coordinates2dFactory.cc  GameData.cc  Ship2d.cc  Ship2dFactory.cc  TerminalBoats2d.cc  main.cc
Battleship/test/: CMakeLists.txt
Battleship/test/src/: BoatsGameModelTest.cc  Coordinates2dTest.cc  ShipTest.cc  TerminalBoardTest.cc  gTest.cc  shipMastTest.cc  terminalBoardTest.cc
